recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:10: error: not found: value n
  n=100
  ^FourSquare:11: error: not found: value n
  avance(n)
         ^FourSquare:13: error: not found: value n
  avance(n)
         ^FourSquare:15: error: not found: value n
  avance(n)
         ^FourSquare:17: error: not found: value n
  avance(n)
         ^FourSquare:20: error: not found: value n
  avance(n)
         ^FourSquare:26: error: not found: value n
  n=100
  ^FourSquare:27: error: not found: value n
  avance(n)
         ^FourSquare:29: error: not found: value n
  avance(n)
         ^FourSquare:31: error: not found: value n
  avance(n)
         ^FourSquare:33: error: not found: value n
  avance(n)
         ^