recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  FaitCarre1()
  for (i<-1 to 3){
    FaitCarre2()
  }
}

def FaitCarre1(){
  baisseBrosse()
  n=100
  avance(n)
  droite(90)
  avance(n)
  droite(90)
  avance(n)
  droite(90)
  avance(n)
  leveBrosse()
  droite(180)
  avance(n)
  droite(90) 
}

def FaitCarre2(){
  baisseBrosse()
  n=100
  avance(n)
  droite(90)
  avance(n)
  droite(90)
  avance(n)
  droite(180)
  avance(n)
  leveBrosse()
  droite(90) 
}
